Use Filesystem locking to avoid concurrent updates